<resources>
    <string name="login">登录</string>
    <string name="socket_exception">服务器连接出错</string>
    <string name="socket_timeout_exception">服务器连接超时</string>
    <string name="unknown_host_exception">无法连接到服务器</string>
    <string name="sure">确定</string>
    <string name="notice">提示</string>
    <string name="cancel">取消</string>
    <string name="str_register"><Data><![CDATA[还没有帐号？<font color="#ff0000">%3$s</font>]]></Data></string>
    <string name="login_out">退出登录</string>
    <string name="home_title">主页</string>
    <string name="register_company">注册公司</string>
    <string name="config_auth">配置权限</string>
    <string name="modify_auth">修改权限</string>
    <string name="modify_enterprise">修改企业信息</string>
    <string name="cai">财商道</string>
    <string name="commerce">商会通</string>
    <string name="commerce_manage">商会管理</string>
    <string name="not_use">暂不可用</string>
    <string name="modify_company_info">修改企业基本资料</string>
    <string name="company_introduce">公司简介</string>
    <string name="company_website">公司官网</string>
    <string name="company_product">主营产品</string>
    <string name="contact">联系人</string>
    <string name="contact_way">联系方式</string>
    <string name="add_vedio">添加视频</string>
    <string name="add_pic">添加照片</string>
    <string name="other_modify">其他修正项</string>
    <string name="company_name">公司名称</string>
    <string name="company_nature">公司性质</string>
    <string name="company_vat_way">增值税征收方式</string>
    <string name="company_income_way">所得税征收方式</string>
    <string name="company_tax_id">税号</string>
    <string name="company_bank">开户银行</string>
    <string name="company_bank_account">银行账号</string>
    <string name="company_address">公司地址</string>
    <string name="company_invoice_way">开票方式 </string>
    <string name="company_legal_name">法人姓名</string>
    <string name="company_legal_id">法人身份证号</string>
    <string name="success">成功</string>
    <string name="success_upload">上传成功</string>
    <string name="failed">失败，请重试！</string>
    <string name="config_success">配置成功</string>
    <string name="config_failed">配置失败，请重试！</string>
    <string name="excel_data_error">此文件数据不正确！</string>
    <string name="authority_target">请选择配置对象</string>
    <string name="select_position">请选择职位</string>
    <string name="name_select">请搜索姓名</string>
    <string name="authority_carousel">查看轮播图片以及对于的文字内容</string>
    <string name="corporation_exhabition">优秀企业展</string>
    <string name="news">热点新闻</string>
    <string name="learn_each">学习互动</string>
    <string-array name="config_target">
        <item>按职位配置</item>
        <item>按姓名配置</item>

    </string-array>
    <string name="commerce_introduce">商会介绍</string>
    <string name="invest_center">投融资中心</string>
    <string name="authority_config">配置修改权限</string>
    <string-array name="country_names">

        <item>Zimbabwe</item>

    </string-array>
    <string name="todo">TODO</string>
</resources>