<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f0f0f3"
    android:orientation="vertical">

    <include layout="@layout/activity_title"></include>

    <TextView
        android:id="@+id/tv_config_target"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/bg_regtangle_white_xml"
        android:drawableRight="@drawable/ic_drop_select"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_7"
        android:paddingRight="@dimen/dimen_10"
        android:text="@string/authority_target"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_go_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/bg_regtangle_white_xml"
        android:drawablePadding="@dimen/dimen_10"
        android:drawableRight="@drawable/ic_search"
        android:paddingRight="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_7"
        android:text="@string/name_select"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_select_positon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/bg_regtangle_white_xml"
        android:drawableRight="@drawable/ic_drop_select"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_7"
        android:paddingRight="@dimen/dimen_10"
        android:text="@string/select_position"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
